# middelboard

./: .gitignore  README.md  create_database.py  main.py  notebook.py  parse_schools.py  pyproject.toml  samenvatting.txt  school_coordinates.json  update_db_from_json.py  urls.txt
html/: resultaten-alasca-vwo-havo-vwo-en-ib.html  resultaten-barlaeus-gymnasium.html  resultaten-berlage-lyceum.html  resultaten-calandlyceum.html  resultaten-comenius-lyceum-amsterdam.html  resultaten-cornelius-haga-lyceum-islamitische-scholengemeenschap-voor-mavo-havo-en-vwo.html  resultaten-cygnus-gymnasium.html  resultaten-damstede-lyceum.html  resultaten-denise.html  resultaten-fons-vitae-lyceum.html  resultaten-geert-groote-college-amsterdam.html  resultaten-gerrit-van-der-veen-college.html  resultaten-het-4e-gymnasium.html  resultaten-het-amsterdams-lyceum.html  resultaten-het-cartesius-lyceum.html  resultaten-het-hervormd-lyceum-west.html  resultaten-hlz.html  resultaten-hyperion-lyceum.html  resultaten-ir-lely-lyceum.html  resultaten-kairos-tienercollege.html  resultaten-lumion.html  resultaten-marcanti-college.html  resultaten-metis-montessori-lyceum-vwo-havo.html  resultaten-metropolis-lyceum.html  resultaten-montessori-lyceum-amsterdam-hoofdlocatie.html  resultaten-montessori-lyceum-pax.html  resultaten-montessori-lyceum-terra-nova.html  resultaten-osb-amsterdam.html  resultaten-pieter-nieuwland-college.html  resultaten-sint-ignatiusgymnasium.html  resultaten-spinoza-lyceum-amsterdam.html  resultaten-st-nicolaaslyceum.html  resultaten-vinse-school.html  tevredenheid-calandlyceum.html  (+36 more)
(+89 files in other folders)
