[project]
name = "scholenopdekaart"
version = "0.1.0"
description = "Amsterdam secondary school data dashboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.4",
    "folium>=0.20.0",
    "marimo[sql]>=0.19.7",
    "numpy>=2.4.1",
    "pypdf>=6.6.2",
]

[project.scripts]
middelbare = "middelbare.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["middelbare"]

[tool.uv]
package = true
